--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.24.0",
-    "husky": "^6.0.0",
+    "husky": "4",
     "lint-staged": "^10.5.4"
   },
   "scripts": {
     "lint": "eslint ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   },
   "lint-staged": {
     "*.js": [
       "eslint -- fix",
       "git add"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
