--- a/package.json
+++ b/package.json
@@ -5,21 +5,17 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.24.0",
-    "husky": "4",
+    "husky": "^6.0.0",
     "lint-staged": "^10.5.4"
   },
   "scripts": {
-    "lint": "eslint ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test"
-    }
+    "lint": "eslint .",
+    "lint-staged": "npx lint-staged",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
-      "eslint -- fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
