--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prac1",
-  "version": "2.1.2-2",
+  "version": "3.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
